
openonload-201205-p3
--------------------

- bug30429: Fix assertion in kernel when >64K packet buffers used.


openonload-201205-p2
--------------------

- bug30110: Fix sfcaffinity_config regression and support newer kernels.
- bug29929: Return from onload_zc_recv on END_OF_BURST during recv via OS.
- bug30108: Fix kernel panic caused by TCP loopback acceleration.
- bug30429: Fix bug causing misbehaviour when >64K packet buffers used.
- bug30429: Fix integer overflow when run out of buffer table space.
- bug30417: Fix bug in TCP send() path leading to app seg-fault.
- bug30445: Fix bug in TCP send() path leading to stack lock getting stuck.


openonload-201205
-----------------

- bug28090: Fix close and destructor functions for epoll.
- bug28268: Fix command line arg handling in onload_tcpdump.
- bug27932: RPM spec file dependency fix for MRG rt kernels.
- bug27700: Validate options in kernel to protect against bad values.
- TCP loopback acceleration (see release notes).
- Don't disable interrupts when lock contention detected.
- Improvements to TCP/UDP select/poll/epoll handling in kernel.
- Do not grab stack lock when EF_POLL_ON_DEMAND=0.
- bug27186: Fix sys-calls and interrupts with select + TCP-listener.
- bug27102: Fix bugs relating to signal handling at process termination.
- bug27329: Fix scaling of timers on SFN6x22F adapters.
- TCP striping feature reinstated.
- bug27530: Allow non-root to set EF_IRQ_CORE with EF_PACKET_BUFFER_MODE=1.
- Put useful info in /proc/$pid/fd to identify Onload sockets and stacks.
- Reduce ACK rate when streaming to increase TCP efficiency.
- Fix epoll bug failing to report data arriving via kernel.
- bug2641: Fix problems relating to handling of ARP.
- New tool onload_fuser to identify processes using Onload.
- bug27997: Fix bug that caused bad error code to be returned by close().
- Added module options to set max size of control plane tables.
- bug28096: Do not access user-space data under spinlock