@@ -108,6 +108,6 @@ Any questions?
 
 
 ==========
- version: openonload-201205-p3
-revision: a56c94e1f619 (ool201205) openonload-201205-p3
-    date: Wed Jun 20 15:19:54 BST 2012
+ version: openonload-201205-p3a
+revision: 4252384ca883 (ool201205) openonload-201205-p3a
+    date: Wed Nov 21 11:17:47 GMT 2012
